# knappy

./: .gitignore  README.md  pyproject.toml
docs/: planning.md
src/knappy/: app.py  definitions.py  items.csv  main.py
src/knappy/core/: models.py
src/knappy/data/: items.csv
src/knappy/util/: listtable.py
